fix font size on smaller screens

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -96,13 +96,6 @@ body > * {
   grid-column: 2;
 }
 
-@media only screen and (max-width: 720px) {
- body {
-  font-size: 1.15rem;
- }
-}
-
-
 body > header {
   /* background-color: var(--accent-bg); */
   border-bottom: 1px dashed var(--border-light);
@@ -172,6 +165,18 @@ h1,
 h2,
 h3 {
   line-height: 1.1;
+}
+
+@media only screen and (max-width: 720px) {
+  body {
+    font-size: 1.15rem;
+  }
+  body > header {
+    font-size: 1.1rem;
+  }
+  body > footer {
+    font-size: 1rem;
+  }
 }
 
 /* Reduce header size on mobile */
